카운트 이벤트 수정 및 리드미 업데이트

--- a/sub4/sub4_3.html
+++ b/sub4/sub4_3.html
@@ -231,6 +231,7 @@
       </div>
     </div>
   </article>
+  <!-- <div class="topText"></div> -->
 
   <? include "../common/sub_footer.html" ?>
   <!-- <div class="text">0</div> -->
