리드미 수정 및 반응형 인덱스 수정

--- a/media/index.html
+++ b/media/index.html
@@ -20,6 +20,7 @@
 	<script src="./js/prefixfree.min.js"></script>
 
 	<script>
+		//모바일 웹 주소창 사라지게
 		// <![CDATA[
 		try {
 			window.addEventListener(
