마크업 수정 및 카운트 함수 수정

--- a/common/main_header.html
+++ b/common/main_header.html
@@ -9,7 +9,7 @@
   <header id="headerArea">
     <div class="headerInner">
       <div class="innerSection">
-        <h1><a href="./index.html">동아ST</a></h1>
+        <h1><a href="./index.html">동아ST 로고</a></h1>
 
         <?
         @extract($_GET); 
