--- a/common/sub_header.html
+++ b/common/sub_header.html
@@ -8,7 +8,7 @@
 <div class="wrap">
     <header id="headerArea">
         <div class="headerInner">
-            <h1><a href="../index.html">동아ST</a></h1>
+            <h1><a href="../index.html">동아ST 로고</a></h1>
 
             <?
             @extract($_GET); 
