--- a/mobile/sub2/sub2_1.html
+++ b/mobile/sub2/sub2_1.html
@@ -74,7 +74,7 @@
         <div id="chart8">
           <a href="#" class="hidden">연구개발 투자그래프</a>
         </div>
-        <span>■ 투자액(억원)</span>
+        <span class="chart_legend">■ 투자액(억원)</span>
       </div>
       <p>동아ST는 지속적인 R&D 투자를 통해 국제규격의 인프라를 구축해 나가고 있으며, 차별화된 기술 도입을 위해 국내외 전문가들과 폭넓은 공동연구 체제를 구축하는 한편, 세계적인 제약회사 및 연구기관들과
         전략적 제휴 관계를 쌓아 혁신적 의약품 개발을 추진하고 있습니다.</p>
