--- a/media/sub3.html
+++ b/media/sub3.html
@@ -180,11 +180,11 @@
 									Moana<br>how far I'll go
 								</span> -->
 								<div class="click_box">
-									<a class="playBtn" href="#" onclick="play1();">
+									<a class="playBtn" href="#">
 										<span class="hidden">재생</span>
 										<i class="far fa-play-circle"></i>
 									</a>
-									<a class="stopBtn" href="#" onclick="stop1();">
+									<a class="stopBtn" href="#">					
 										<span class="hidden">중지</span>
 										<i class="far fa-stop-circle"></i>
 									</a>
@@ -201,11 +201,11 @@
 									Tamatoa<br>Shiny
 								</span> -->
 								<div class="click_box">
-									<a class="playBtn" href="#" onclick="play2();">
+									<a class="playBtn" href="#">					
 										<span class="hidden">재생</span>
 										<i class="far fa-play-circle"></i>
 									</a>
-									<a class="stopBtn" href="#" onclick="stop2();">
+									<a class="stopBtn" href="#">					
 										<span class="hidden">중지</span>
 										<i class="far fa-stop-circle"></i>
 									</a>
@@ -222,11 +222,11 @@
 									Maui<br>You're welcome
 								</span> -->
 								<div class="click_box">
-									<a class="playBtn" href="#" onclick="play3();">
+									<a class="playBtn" href="#">					
 										<span class="hidden">재생</span>
 										<i class="far fa-play-circle"></i>
 									</a>
-									<a class="stopBtn" href="#" onclick="stop3();">
+									<a class="stopBtn" href="#">					
 										<span class="hidden">중지</span>
 										<i class="far fa-stop-circle"></i>
 									</a>
