ajax -해외사업 모달팝업

--- a/mobile/sub2/sub2_4.html
+++ b/mobile/sub2/sub2_4.html
@@ -105,7 +105,7 @@
   </article>
   <!-- 푸터영역 -->
   <? include "../sub_footer.html" ?>
-  <script src="./js/sub2_4.js"></script>
+  <script src="./js/sub2Ajax.js"></script>
 </body>
 
 </html>
