css 수정 및 이미지 추가

--- a/mobile/sub3/sub3_1.html
+++ b/mobile/sub3/sub3_1.html
@@ -79,6 +79,7 @@
           </div>
           <div class="value">
             <h3>CSR 핵심가치</h3>
+            <div class="value_img" aria-label="CSR 핵심가치 - 지속성, 진정성, 업의 연관성"></div>
             <ul>
               <li><span>지속성</span></li>
               <li><span>진정성</span></li>
