지도 오류 해결

--- a/sub1/sub1_4.html
+++ b/sub1/sub1_4.html
@@ -61,14 +61,14 @@
 
         <div class="contlist section01">
           <div class="map" id="head">
-            <div id="mapHead"></div>
+            <div id="mapHead" class="map1"></div>
             <div id="mapLab" class="map2"></div>
             <div class="summary">
               <dl>
                 <dt>동아ST 본사</dt>
                 <dd>서울특별시 동대문구 천호대로 64</dd>
                 <dd>
-                  <a href="#" class="btn">
+                  <a href="#" class="btn1">
                     <span>연구소 위치</span>
                     <i class="fa-solid fa-circle-chevron-right"></i>
                   </a>
@@ -151,7 +151,7 @@
         </div>
         <div class="contlist section02">
           <div class="map" id="factory">
-            <div id="mapCheonan"></div>
+            <div id="mapCheonan" class="map1"></div>
             <div id="mapDalseong" class="map2"></div>
             <div class="summary">
               <dl>
